Use source control instead of fs.

--- a/packages.cfg
+++ b/packages.cfg
@@ -26,4 +26,7 @@ devtools =
 
 # Checkout locations
 [sources]
+# for distributions without a separate version control URL, file system (fs)
 optilux.policy = fs optilux.policy
+# git
+optilux.policy = git git://github.com/ivanteoh/optilux.policy.git
