--- a/versions.cfg
+++ b/versions.cfg
@@ -24,3 +24,16 @@ Cheetah = 2.2.1
 Paste = 1.7.5.1
 PasteScript = 1.7.5
 PasteDeploy = 1.5.0
+
+# Custom
+Products.PloneFormGen = 1.7.0
+Products.PythonField = 1.1.3
+Products.TALESField = 1.1.3
+Products.TemplateFields = 1.2.5
+collective.js.jqueryui = 1.8.16.6
+lazy = 1.0
+templer.buildout = 1.0a2
+templer.core = 1.0b3
+templer.plone = 1.0a1
+templer.zope = 1.0a2
+
