Add optilux theme.

--- a/packages.cfg
+++ b/packages.cfg
@@ -15,8 +15,10 @@ unzip = true
 main =
   Plone
   optilux.policy
+  optilux.theme
 test =
   optilux.policy [test]
+  optilux.theme [test]
 devtools =
   bpython
   plone.reload
@@ -27,6 +29,7 @@ devtools =
 # Checkout locations
 [sources]
 # for distributions without a separate version control URL, file system (fs)
-optilux.policy = fs optilux.policy
+#optilux.policy = fs optilux.policy
 # git
 optilux.policy = git git://github.com/ivanteoh/optilux.policy.git
+optilux.theme = git git://github.com/ivanteoh/optilux.theme.git
