--- a/packages.cfg
+++ b/packages.cfg
@@ -32,5 +32,5 @@ devtools =
 # for distributions without a separate version control URL, file system (fs)
 #optilux.policy = fs optilux.policy
 # git
-optilux.policy = git git://github.com/ivanteoh/optilux.policy.git
-optilux.theme = git git://github.com/ivanteoh/optilux.theme.git
+optilux.policy = git git@github.com:ivanteoh/optilux.policy.git
+optilux.theme = git git@github.com:ivanteoh/optilux.theme.git
